# libhasher

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.cargo/: config.toml
.forgejo/workflows/: pull.yml  release.yml  test.yml
hasher/: Cargo.toml  README.md
hasher/src/: main.rs
hasher/tests/: test.hashfail  test.txt.blake2  test.txt.fnv  test.txt.md5
libhasher/: Cargo.toml  README.md
libhasher/tests/: test.invalid  test.txt.blake3  test.txt.sha1  test.txt.sha256  test.txt.sha3_512  test.txt.sha512  test.txt.xxh32  test.unsupported
src/: blake.rs  lib.rs  main.rs  xxhash.rs
tests/: test.fail  test.large  test.txt.blake2  test.txt.blake3  test.txt.fnv  test.txt.md5  test.txt.sha1  test.txt.sha256  test.txt.sha3_256  test.txt.sha3_512  test.txt.sha512  test.txt.xxh32  test.txt.xxh3_128  test.txt.xxh3_64  test.txt.xxh64
